# backend/app/Models/User.php
@@ -5,10 +5,11 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Sanctum\HasApiTokens;
 
 class User extends Authenticatable
 {
-    use HasFactory, Notifiable;
+    use HasApiTokens, HasFactory, Notifiable;
 
     protected $table = 'users';
 
@@ -19,7 +20,7 @@ class User extends Authenticatable
         'password',
         'rol',
         'direccion',
-        'ciudad',
+        'municipio',
         'provincia',
         'cp',
     ];
@@ -39,8 +40,9 @@ class User extends Authenticatable
 
     public function setEmailAttribute($value)
     {
-        $this->attributes['email'] = strtolower($value);
+        $this->attributes['email'] = strtolower(trim($value));
     }
+
 
     public function pedidos()
     {
